Package_Tools/include-C/Ubuntu_26.04/glib-2.0/gio/inarbeit/pp/gdbusmethodinvocation.pp


unit gdbusmethodinvocation;
interface

{
  Automatically converted by H2Pas 1.0.0 from gdbusmethodinvocation.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    gdbusmethodinvocation.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
Pgchar  = ^gchar;
PGDBusConnection  = ^GDBusConnection;
PGDBusMessage  = ^GDBusMessage;
PGDBusMethodInfo  = ^GDBusMethodInfo;
PGDBusMethodInvocation  = ^GDBusMethodInvocation;
PGDBusPropertyInfo  = ^GDBusPropertyInfo;
PGError  = ^GError;
PGUnixFDList  = ^GUnixFDList;
PGVariant  = ^GVariant;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{ GDBus - GLib D-Bus Library
 *
 * Copyright (C) 2008-2010 Red Hat, Inc.
 *
 * SPDX-License-Identifier: LGPL-2.1-or-later
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General
 * Public License along with this library; if not, see <http://www.gnu.org/licenses/>.
 *
 * Author: David Zeuthen <davidz@redhat.com>
  }
{$ifndef __G_DBUS_METHOD_INVOCATION_H__}
{$define __G_DBUS_METHOD_INVOCATION_H__}
{$if !defined (__GIO_GIO_H_INSIDE__) && !defined (GIO_COMPILATION)}
{$error "Only <gio/gio.h> can be included directly."}
{$endif}
{$include <gio/giotypes.h>}

{ was #define dname def_expr }
function G_TYPE_DBUS_METHOD_INVOCATION : longint; { return type might be wrong }

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function G_DBUS_METHOD_INVOCATION(o : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function G_IS_DBUS_METHOD_INVOCATION(o : longint) : longint;

{*
 * G_DBUS_METHOD_INVOCATION_HANDLED:
 *
 * The value returned by handlers of the signals generated by
 * the `gdbus-codegen` tool to indicate that a method call has been
 * handled by an implementation. It is equal to %TRUE, but using
 * this macro is sometimes more readable.
 *
 * In code that needs to be backwards-compatible with older GLib,
 * use %TRUE instead, often written like this:
 *
 * |[
 *   g_dbus_method_invocation_return_error (invocation, ...);
 *   return TRUE;    // handled
 * ]|
 *
 * Since: 2.68
  }
const
  G_DBUS_METHOD_INVOCATION_HANDLED = _TRUE;  
{*
 * G_DBUS_METHOD_INVOCATION_UNHANDLED:
 *
 * The value returned by handlers of the signals generated by
 * the `gdbus-codegen` tool to indicate that a method call has not been
 * handled by an implementation. It is equal to %FALSE, but using
 * this macro is sometimes more readable.
 *
 * In code that needs to be backwards-compatible with older GLib,
 * use %FALSE instead.
 *
 * Since: 2.68
  }
  G_DBUS_METHOD_INVOCATION_UNHANDLED = _FALSE;  

function g_dbus_method_invocation_get_type:TGType;cdecl;external;
(* Const before type ignored *)
function g_dbus_method_invocation_get_sender(invocation:PGDBusMethodInvocation):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_dbus_method_invocation_get_object_path(invocation:PGDBusMethodInvocation):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_dbus_method_invocation_get_interface_name(invocation:PGDBusMethodInvocation):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_dbus_method_invocation_get_method_name(invocation:PGDBusMethodInvocation):Pgchar;cdecl;external;
(* Const before type ignored *)
function g_dbus_method_invocation_get_method_info(invocation:PGDBusMethodInvocation):PGDBusMethodInfo;cdecl;external;
(* Const before type ignored *)
function g_dbus_method_invocation_get_property_info(invocation:PGDBusMethodInvocation):PGDBusPropertyInfo;cdecl;external;
function g_dbus_method_invocation_get_connection(invocation:PGDBusMethodInvocation):PGDBusConnection;cdecl;external;
function g_dbus_method_invocation_get_message(invocation:PGDBusMethodInvocation):PGDBusMessage;cdecl;external;
function g_dbus_method_invocation_get_parameters(invocation:PGDBusMethodInvocation):PGVariant;cdecl;external;
function g_dbus_method_invocation_get_user_data(invocation:PGDBusMethodInvocation):Tgpointer;cdecl;external;
procedure g_dbus_method_invocation_return_value(invocation:PGDBusMethodInvocation; parameters:PGVariant);cdecl;external;
{$ifdef G_OS_UNIX}
procedure g_dbus_method_invocation_return_value_with_unix_fd_list(invocation:PGDBusMethodInvocation; parameters:PGVariant; fd_list:PGUnixFDList);cdecl;external;
{$endif}
{ G_OS_UNIX  }
(* Const before type ignored *)

procedure g_dbus_method_invocation_return_error(invocation:PGDBusMethodInvocation; domain:TGQuark; code:Tgint; format:Pgchar; args:array of const);cdecl;external;
procedure g_dbus_method_invocation_return_error(invocation:PGDBusMethodInvocation; domain:TGQuark; code:Tgint; format:Pgchar);cdecl;external;
(* Const before type ignored *)
procedure g_dbus_method_invocation_return_error_valist(invocation:PGDBusMethodInvocation; domain:TGQuark; code:Tgint; format:Pgchar; var_args:Tva_list);cdecl;external;
(* Const before type ignored *)
procedure g_dbus_method_invocation_return_error_literal(invocation:PGDBusMethodInvocation; domain:TGQuark; code:Tgint; message:Pgchar);cdecl;external;
(* Const before type ignored *)
procedure g_dbus_method_invocation_return_gerror(invocation:PGDBusMethodInvocation; error:PGError);cdecl;external;
procedure g_dbus_method_invocation_take_error(invocation:PGDBusMethodInvocation; error:PGError);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure g_dbus_method_invocation_return_dbus_error(invocation:PGDBusMethodInvocation; error_name:Pgchar; error_message:Pgchar);cdecl;external;
{$endif}
{ __G_DBUS_METHOD_INVOCATION_H__  }

implementation

{ was #define dname def_expr }
function G_TYPE_DBUS_METHOD_INVOCATION : longint; { return type might be wrong }
  begin
    G_TYPE_DBUS_METHOD_INVOCATION:=g_dbus_method_invocation_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function G_DBUS_METHOD_INVOCATION(o : longint) : longint;
begin
  G_DBUS_METHOD_INVOCATION:=G_TYPE_CHECK_INSTANCE_CAST(o,G_TYPE_DBUS_METHOD_INVOCATION,GDBusMethodInvocation);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function G_IS_DBUS_METHOD_INVOCATION(o : longint) : longint;
begin
  G_IS_DBUS_METHOD_INVOCATION:=G_TYPE_CHECK_INSTANCE_TYPE(o,G_TYPE_DBUS_METHOD_INVOCATION);
end;


end.
